# test_task_gitea

./: .gitignore  .gitiignore  README.md  pyproject.toml  requirements.txt
gitea_tests/: conftest.py  docker-compose.yml  test_data.py  tests.py
helpers/: helpers.py
models/: users.py
pages/: head_navigation.py  installation.py  registration.py  repo_page.py  sign_in.py  start_html_page.py
